# Qt-styles

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style_list_widget.cpp  style_list_widget.hpp  style_list_widget.qss
.github/workflows/: github.yml
cmake_utils/: debug.cmake  generate_execution.cmake  generate_library.cmake  includeLibsNDirs.cmake  modules.cmake  setFlags.cmake
tests/list_widget/: list_widget.cpp  wrapper.cpp  wrapper.hpp
tests/styleListWidget/: main.cpp
